--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -31,6 +31,13 @@
     <None Remove="Views\Blog\" />
     <None Remove="Areas\Admin\ViewModels\Blog\" />
     <None Remove="Areas\Admin\ViewModels\Tag\" />
+    <None Remove="Views\About\" />
+    <None Remove="Areas\Admin\ViewModels\About\" />
+    <None Remove="Areas\Admin\ViewModels\Team\" />
+    <None Remove="Areas\Admin\ViewModels\Brand\" />
+    <None Remove="Views\Contact\" />
+    <None Remove="Areas\Admin\ViewModels\Social\" />
+    <None Remove="Areas\Admin\ViewModels\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -57,6 +64,13 @@
     <Folder Include="Views\Blog\" />
     <Folder Include="Areas\Admin\ViewModels\Blog\" />
     <Folder Include="Areas\Admin\ViewModels\Tag\" />
+    <Folder Include="Views\About\" />
+    <Folder Include="Areas\Admin\ViewModels\About\" />
+    <Folder Include="Areas\Admin\ViewModels\Team\" />
+    <Folder Include="Areas\Admin\ViewModels\Brand\" />
+    <Folder Include="Views\Contact\" />
+    <Folder Include="Areas\Admin\ViewModels\Social\" />
+    <Folder Include="Areas\Admin\ViewModels\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
