--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -42,6 +42,7 @@
     <None Remove="Helpers\Extentions\" />
     <None Remove="Areas\Admin\Views\Advert\" />
     <None Remove="Areas\Admin\Views\Slider\" />
+    <None Remove="Areas\Admin\Views\Team\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -79,6 +80,7 @@
     <Folder Include="Helpers\Extentions\" />
     <Folder Include="Areas\Admin\Views\Advert\" />
     <Folder Include="Areas\Admin\Views\Slider\" />
+    <Folder Include="Areas\Admin\Views\Team\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
