--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -43,6 +43,7 @@
     <None Remove="Areas\Admin\Views\Advert\" />
     <None Remove="Areas\Admin\Views\Slider\" />
     <None Remove="Areas\Admin\Views\Team\" />
+    <None Remove="Areas\Admin\Views\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -81,6 +82,7 @@
     <Folder Include="Areas\Admin\Views\Advert\" />
     <Folder Include="Areas\Admin\Views\Slider\" />
     <Folder Include="Areas\Admin\Views\Team\" />
+    <Folder Include="Areas\Admin\Views\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
