--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -47,6 +47,9 @@
     <None Remove="Areas\Admin\ViewModels\Subscribe\" />
     <None Remove="Areas\Admin\Views\Subscribe\" />
     <None Remove="Areas\Admin\Views\About\" />
+    <None Remove="Areas\Admin\Views\Review\" />
+    <None Remove="Areas\Admin\ViewModels\Customer\" />
+    <None Remove="Areas\Admin\Views\Customer\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -89,6 +92,9 @@
     <Folder Include="Areas\Admin\ViewModels\Subscribe\" />
     <Folder Include="Areas\Admin\Views\Subscribe\" />
     <Folder Include="Areas\Admin\Views\About\" />
+    <Folder Include="Areas\Admin\Views\Review\" />
+    <Folder Include="Areas\Admin\ViewModels\Customer\" />
+    <Folder Include="Areas\Admin\Views\Customer\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
@@ -103,5 +109,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.24" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\img\testimonial\1.jpg" />
   </ItemGroup>
 </Project>
