--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -54,6 +54,7 @@
     <None Remove="Areas\Admin\ViewModels\Category\" />
     <None Remove="Areas\Admin\Views\Category\" />
     <None Remove="Areas\Admin\Views\Product\" />
+    <None Remove="Areas\Admin\Views\Blog\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -103,6 +104,7 @@
     <Folder Include="Areas\Admin\ViewModels\Category\" />
     <Folder Include="Areas\Admin\Views\Category\" />
     <Folder Include="Areas\Admin\Views\Product\" />
+    <Folder Include="Areas\Admin\Views\Blog\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
