--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -55,6 +55,8 @@
     <None Remove="Areas\Admin\Views\Category\" />
     <None Remove="Areas\Admin\Views\Product\" />
     <None Remove="Areas\Admin\Views\Blog\" />
+    <None Remove="Areas\Admin\Views\Setting\" />
+    <None Remove="Areas\Admin\ViewModels\Setting\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -105,6 +107,8 @@
     <Folder Include="Areas\Admin\Views\Category\" />
     <Folder Include="Areas\Admin\Views\Product\" />
     <Folder Include="Areas\Admin\Views\Blog\" />
+    <Folder Include="Areas\Admin\Views\Setting\" />
+    <Folder Include="Areas\Admin\ViewModels\Setting\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
