--- a/BackendProject/BackendProject.csproj
+++ b/BackendProject/BackendProject.csproj
@@ -61,6 +61,8 @@
     <None Remove="ViewModels\Account\" />
     <None Remove="Areas\Admin\Views\Account\" />
     <None Remove="Areas\Admin\ViewModels\Account\" />
+    <None Remove="Views\Wishlist\" />
+    <None Remove="ViewModels\Wishlist\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -117,6 +119,8 @@
     <Folder Include="ViewModels\Account\" />
     <Folder Include="Areas\Admin\Views\Account\" />
     <Folder Include="Areas\Admin\ViewModels\Account\" />
+    <Folder Include="Views\Wishlist\" />
+    <Folder Include="ViewModels\Wishlist\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
